# ManualApp

./: .clang-format  .gitignore  .qmlls.ini  CMakeLists.txt  README.md  app_icon.rc  resources.qrc
media/jsons/: TO1.json  TO1temp.json  TO2.json  TO2temp.json  TO3.json  models.json
qml/: About.qml  Activate.qml  Admin.qml  Dashboard.qml  InitSerial.qml  InitSettings.qml  InstallPO.qml  Main.qml  ModelSelectionCard.qml  ModelSelectionPage.qml  Reports.qml  SelectTO.qml  Services.qml  Settings.qml  SettingsForm.qml  Start.qml  Summary.qml  Test.qml  UploadReport.qml  UploadWindow.qml
qml/ManualApp/: Theme.qml  qmldir
qml/Screens/: MainScreen.qml  ServicesScreen.qml  SettingsScreen.qml  SummaryScreen.qml  TOSelectionScreen.qml  qmldir
qml/components/: CardDelegate.qml  CardSection.qml  ConfirmSavePopup.qml  Constants.qml  FormField.qml  ModelSettingCheckBox.qml  ModelSettingDate.qml  NewDateField.qml  NewTextField.qml  NotesTextArea.qml  RepairMethodEditor.qml  SettingCheckBox.qml  SettingsUploadPopup.qml
qml/models/: AboutRenderer.qml  DynamicFormRenderer.qml
qml/styles/: Theme.qml
qml/utils/: DateUtils.js  Utils.js
src/: main.cpp
src/ManualAppCorePlugin/: CMakeLists.txt  adminmanager.cpp  adminmanager.h  configmanager.cpp  configmanager.h  datamanager.cpp  datamanager.h  fileservice.cpp  fileservice.h  installmanager.cpp  installmanager.h  kalmar32settings.cpp  kalmar32settings.h  loger.h  networkservice.cpp  networkservice.h  pdfexporter.cpp  pdfexporter.h  phasar32settings.cpp  phasar32settings.h  reportmanager.cpp  reportmanager.h  settingsbase.h  settingsmanager.cpp  settingsmanager.h  step.h  stepmodel.cpp  stepmodel.h  utils.h
src/ManualAppCorePlugin/file/: configmanager.cpp  fileservice.h  loger.h  pdfexporter.h
src/ManualAppCorePlugin/models/: stepmodel.cpp  stepmodel.h
src/ManualAppCorePlugin/network/: djangoerrorparser.h  httpclient.cpp  httpclient.h  synchttpclient.cpp  synchttpclient.h
src/ManualAppCorePlugin/settings/: modelsettings.cpp  modelsettings.h  settingsmanager.cpp  settingsmanager.h
src/ManualAppCorePlugin/software/: licensehandler.cpp  licensehandler.h
src/data/: datamanager.cpp  datamanager.h  fileservice.cpp  jsonstorage.cpp  jsonstorage.h  networkservice.cpp  networkservice.h  pdfexporter.cpp  pdfexporter.h  reportmanager.cpp  reportmanager.h  settingsmanager.cpp  settingsmanager.h  step.h  stepmodel.cpp  stepmodel.h  utils.h
src/quazip/: CMakeLists.txt
